--- a/scripts/create-staffer-pages.ipynb
+++ b/scripts/create-staffer-pages.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -117,9 +117,9 @@
       "['1/3/2024 17:59:52\\tEster Tsai\\tshe/her\\thttps://drive.google.com/file/d/1r-v8jm-fpMXt5pvsGqIBjaYbhquoEEYG/view?usp=sharing']\n",
       "Image for Ester Tsai has been saved successfully to ../assets/staff-images/wi24\\tsai-ester.jpg\n",
       "['1/3/2024 18:51:05\\tCiro Zhang\\the/him\\thttps://drive.google.com/file/d/1sw0lE791jZmE3fRRtuHlT9a8ibpZ2pWi/view?usp=sharing']\n",
-      "Failed to download and save image for Ciro Zhang. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6C489C20>\n",
+      "Failed to download and save image for Ciro Zhang. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6C4A8400>\n",
       "['1/3/2024 20:24:50\\tOren Ciolli\\the/him\\thttps://drive.google.com/file/d/10KWQ5rUMgfQT_L-Af4452BST5o97dflb/view?usp=sharing']\n",
-      "Failed to download and save image for Oren Ciolli. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6B7A38B0>\n",
+      "Failed to download and save image for Oren Ciolli. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6A316900>\n",
       "['1/3/2024 21:17:46\\tKeenan Serrao\\the/him\\thttps://drive.google.com/file/d/1EHVeeaCvbVx4OpgFzM_kWEcj64P11Vh6/view?usp=sharing']\n",
       "Image for Keenan Serrao has been saved successfully to ../assets/staff-images/wi24\\serrao-keenan.jpg\n",
       "['1/4/2024 0:40:02\\tSofia Tkachenko\\tshe/her\\thttps://drive.google.com/file/d/12_B5BDtQCgSzToeFfoygW_WedO_cx5sn/view?usp=sharing']\n",
@@ -127,7 +127,7 @@
       "['1/4/2024 0:52:02\\tPallavi Prabhu\\tshe/her\\thttps://drive.google.com/file/d/1ohZshbfRa9V2A-tACoXrtSYaCTc-oWX6/view?usp=sharing']\n",
       "Image for Pallavi Prabhu has been saved successfully to ../assets/staff-images/wi24\\prabhu-pallavi.jpg\n",
       "['1/4/2024 1:33:57\\tAbel Seyoum\\the/him\\thttps://drive.google.com/file/d/1aSA2NNg04izkyy3gX6uGcP24SpAtiCbi/view?usp=sharing']\n",
-      "Failed to download and save image for Abel Seyoum. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6B7A38B0>\n",
+      "Failed to download and save image for Abel Seyoum. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6C491C70>\n",
       "['1/4/2024 9:44:23\\tChiaChan Ho\\the/him\\thttps://drive.google.com/file/d/1NcZ2bi3irjGgtbMrtqKJ_1QrbtQqOuo0/view?usp=sharing']\n",
       "Image for ChiaChan Ho has been saved successfully to ../assets/staff-images/wi24\\ho-chiachan.jpg\n",
       "['1/3/2024 13:14:53\\tGuoxuan Xu\\the/him\\thttps://drive.google.com/file/d/1HLPQkC9Ei0FF1JXQmdvSMbHdcFAKvjiC/view?usp=sharing']\n",
@@ -137,11 +137,11 @@
       "['1/3/2024 15:38:51\\tRaine Hoang\\tthey/them\\thttps://drive.google.com/file/d/1-Lxj8yY1REXiJym1caTnncbCFYi4O5RR/view?usp=sharing']\n",
       "Image for Raine Hoang has been saved successfully to ../assets/staff-images/wi24\\hoang-raine.jpg\n",
       "['1/3/2024 16:51:23\\tJack Determan\\the/him\\thttps://docs.google.com/document/d/1WMKBCdR2zvha0siRemOkBUo6nNaml6jbteeVJQ6iGac/edit']\n",
-      "Failed to download and save image for Jack Determan. Error: 500 Server Error: Internal Server Error for url: https://doc-0c-18-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/m10r66ma52pcni4fkdeepj7mdqvs0tvq/1704395325000/16520039577878111519/*/1WMKBCdR2zvha0siRemOkBUo6nNaml6jbteeVJQ6iGac?e=download&uuid=03002f39-1812-41b0-a5a4-6f4794c9b550\n",
+      "Failed to download and save image for Jack Determan. Error: 500 Server Error: Internal Server Error for url: https://doc-0c-18-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/v8sdg06jpm8b6uvhp29gjt77qfars9vj/1704395775000/16520039577878111519/*/1WMKBCdR2zvha0siRemOkBUo6nNaml6jbteeVJQ6iGac?e=download&uuid=94b61b8d-0377-4078-a2fa-5d9e49cfa076\n",
       "['1/3/2024 17:24:34\\tYlesia Wu\\tshe/her\\thttps://drive.google.com/file/d/1cyyBxVpTJ6WigsbTVHfdHAfgVgpY5bfZ/view?usp=sharing']\n",
       "Image for Ylesia Wu has been saved successfully to ../assets/staff-images/wi24\\wu-ylesia.jpg\n",
       "['1/3/2024 18:26:51\\tBill Wang\\the/him\\thttps://drive.google.com/file/d/1SQNKL8hUxdpwIXB9cPNT6lqktqaWxhB8/view?usp=sharing']\n",
-      "Failed to download and save image for Bill Wang. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6C525DB0>\n"
+      "Failed to download and save image for Bill Wang. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6C49F270>\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
     "# Call the function with the CSV content and the directory\n",
     "download_and_save_images(csv_content, directory)\n",
     "\n",
-    "# This will extract some, others will need to be done manually.\n"
+    "# This will extract some, others will need to be done manually."
    ]
   },
   {
