fix bios and pictures, add two more

--- a/scripts/create-staffer-pages.ipynb
+++ b/scripts/create-staffer-pages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "role: Tutor\n",
     "pronouns: {pronouns}\n",
     "email: \n",
-    "photo: ../assets/staff-images/wi24/{last_name.lower()}-{first_name.lower()}.jpg\n",
+    "photo: assets/staff-images/wi24/{last_name.lower()}-{first_name.lower()}.jpg\n",
     "description: {description}\n",
     "hometown: {hometown}\n",
     "askabout: {askabout}\n",
@@ -47,53 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../_staffers/rasin-aaron.md has been written successfully!\n",
-      "../_staffers/gao-doris.md has been written successfully!\n",
-      "../_staffers/ho-ashley.md has been written successfully!\n",
-      "../_staffers/tsai-ester.md has been written successfully!\n",
-      "../_staffers/zhang-ciro.md has been written successfully!\n",
-      "../_staffers/ciolli-oren.md has been written successfully!\n",
-      "../_staffers/serrao-keenan.md has been written successfully!\n",
-      "../_staffers/tkachenko-sofia.md has been written successfully!\n",
-      "../_staffers/prabhu-pallavi.md has been written successfully!\n",
-      "../_staffers/seyoum-abel.md has been written successfully!\n",
-      "../_staffers/ho-chiachan.md has been written successfully!\n",
-      "../_staffers/xu-guoxuan.md has been written successfully!\n",
-      "../_staffers/roberg-gina.md has been written successfully!\n",
-      "../_staffers/hoang-raine.md has been written successfully!\n",
-      "../_staffers/determan-jack.md has been written successfully!\n",
-      "../_staffers/wu-ylesia.md has been written successfully!\n",
-      "../_staffers/wang-bill.md has been written successfully!\n"
+      "../_staffers/wang-zelong.md has been written successfully!\n",
+      "../_staffers/kerendian-norah.md has been written successfully!\n"
      ]
     }
    ],
    "source": [
     "# Copy-paste the eight relevant columns from the staff onboarding form responses\n",
-    "all_lines = \"\"\"1/3/2024 11:31:00\tAaron Rasin\the/him\thttps://drive.google.com/file/d/1frQe4Z09_BbIGL6bifbXLgvYesR0VBf6/view?usp=sharing\t4th year, Linguistics, Seventh\tNewton, MA\tLinguistics at UCSD, the La Jolla Symphony\tTacos El Gordo, Puesto, Main Chick\n",
-    "1/3/2024 12:44:11\tDoris Gao\tshe/her\thttps://photos.app.goo.gl/hhiRYchdjPUfAsg86\t4th year, Data Science and Math-Econ, Marshall\tSan Francisco, CA\tMy internship at Scripps Institution of Oceanography, boba\tSushi Ota, Wa Dinning Okan, Blue Water\n",
-    "1/3/2024 16:19:19\tAshley Ho\tshe/her\thttps://drive.google.com/file/d/1axBMlAyfSICSAP0nZZtjnPi6-aEkZ0in/view?usp=sharing\t4th year, Probability & Statistics, Marshall\tIrvine, CA\tCooking, movies/TV shows, corgis\tTasty Noodle House, Pho La Jolla, Monello\n",
-    "1/3/2024 17:59:52\tEster Tsai\tshe/her\thttps://drive.google.com/file/d/1r-v8jm-fpMXt5pvsGqIBjaYbhquoEEYG/view?usp=sharing\t4th year, Data Science, Math Minor, Sixth\tPleasanton, CA\tMy internship at Amazon or Thermo Fisher Scientific, tennis, Christian fellowship\tCava, Tasty Noodle House, 85°C Bakery\n",
-    "1/3/2024 18:51:05\tCiro Zhang\the/him\thttps://drive.google.com/file/d/1sw0lE791jZmE3fRRtuHlT9a8ibpZ2pWi/view?usp=sharing\t2nd year, Data Science, Computer Engineering, ERC\tRichmond, BC, Canada\tBadminton, snowboarding, chess\tShake Shack, Qin West Noodle and Chipotle\n",
-    "1/3/2024 20:24:50\tOren Ciolli\the/him\thttps://drive.google.com/file/d/10KWQ5rUMgfQT_L-Af4452BST5o97dflb/view?usp=sharing\t4th year, Data Science and Math-Econ, Revelle\tSan Jose, CA\tBasketball, music, cooking\tRaki Raki, Turmeric Thai Kitchen, Tasty Noodle House\n",
-    "1/3/2024 21:17:46\tKeenan Serrao\the/him\thttps://drive.google.com/file/d/1EHVeeaCvbVx4OpgFzM_kWEcj64P11Vh6/view?usp=sharing\t2nd year, Data Science, Sixth\tDallas, TX\tGym, music, food, cars\tSeasurf, RakiRaki Ramen, Din Tai Fung\n",
-    "1/4/2024 0:40:02\tSofia Tkachenko\tshe/her\thttps://drive.google.com/file/d/12_B5BDtQCgSzToeFfoygW_WedO_cx5sn/view?usp=sharing\t2nd year, Applied Math, Muir\tSan Jose, CA\tHiking, hot tubs, London Fog tea (sweet treats!)\tTasty Noodle House, Tofu House, Urban Plates\n",
-    "1/4/2024 0:52:02\tPallavi Prabhu\tshe/her\thttps://drive.google.com/file/d/1ohZshbfRa9V2A-tACoXrtSYaCTc-oWX6/view?usp=sharing\t3rd year, Data Science, Marshall \tCypress, CA\tPainting, crafting, baking, TV shows\tCava, Taco Stand, SomiSomi\n",
-    "1/4/2024 1:33:57\tAbel Seyoum\the/him\thttps://drive.google.com/file/d/1aSA2NNg04izkyy3gX6uGcP24SpAtiCbi/view?usp=sharing\t4th year, Data Science, Warren\tSan Diego, CA\tInternships, surfing, places to eat in San Diego\tTacos El Gordo, Chipotle \n",
-    "1/4/2024 9:44:23\tChiaChan Ho\the/him\thttps://drive.google.com/file/d/1NcZ2bi3irjGgtbMrtqKJ_1QrbtQqOuo0/view?usp=sharing\t4th year, International Business, Data Science Minor, Revelle\tTaichung, Taiwan\tGuitar, video games, K-pop\t🍚 YinTang, Din Tai Fung, Haidilao\n",
-    "1/3/2024 13:14:53\tGuoxuan Xu\the/him\thttps://drive.google.com/file/d/1HLPQkC9Ei0FF1JXQmdvSMbHdcFAKvjiC/view?usp=sharing\t2nd year, Data Science, ERC\tShanghai, China\tTraveling, snowboarding, eating\tMongolian Hot Pot, Pho La Jolla, Ajisen Ramen\n",
-    "1/3/2024 13:57:28\tGina Roberg\tshe/her\thttps://drive.google.com/file/d/1a9BN0y_b8teywTKTcn1Mp-VWkwgVPSLC/view?usp=sharing\t3rd year, Data Science, Sixth\tSan Diego, CA\tActing, film, nail art\tSizzling Pot King, Qin West Noodle, Crab Hut\n",
-    "1/3/2024 15:38:51\tRaine Hoang\tthey/them\thttps://drive.google.com/file/d/1-Lxj8yY1REXiJym1caTnncbCFYi4O5RR/view?usp=sharing\t2nd year, Data Science, Sixth\tLos Angeles, CA\tCrochet, video games, art/drawing, wood carving\tRamen Nagi, Tofu House, SomiSomi\n",
-    "1/3/2024 16:51:23\tJack Determan\the/him\thttps://docs.google.com/document/d/1WMKBCdR2zvha0siRemOkBUo6nNaml6jbteeVJQ6iGac/edit\t2nd year, Math-CS and Data Science Minor, ERC\tNorth Andover, MA\tManim Code, soccer, running, chess, reading, Professional Certification in Web Development from Harvard\tDuke's La Jolla, Pizookies from BJ's\n",
-    "1/3/2024 17:24:34\tYlesia Wu\tshe/her\thttps://drive.google.com/file/d/1cyyBxVpTJ6WigsbTVHfdHAfgVgpY5bfZ/view?usp=sharing\t3rd year, Data Science, ERC\tBeijing, China\tChinese pop music, singing, ice skating\t🍲 The Noble Chef, Taste of Hunan, Mo-Mo-Paradise\n",
-    "1/3/2024 18:26:51\tBill Wang\the/him\thttps://drive.google.com/file/d/1SQNKL8hUxdpwIXB9cPNT6lqktqaWxhB8/view?usp=sharing\t2nd year, Data Science, Seventh\tSan Jose, CA \tPiano, reading, pen spinning \t🍟 McDonald's, Spicy City, Taco Stand\"\"\"\n",
-    "\n",
+    "all_lines = \"\"\"1/4/2024 13:07:24\tZelong Wang\the/him\thttps://drive.google.com/file/d/1di9vYlZMRn96QA_TNit5SP8bPskqHqEM/view?usp=drive_link\t4th year, Data Science and Math-Econ\tUrumqi, China\tTennis, upper division Data Science courses\t🥘 Tasty Noodle House, Burger King\n",
+    "1/4/2024 13:29:09\tNorah Kerendian\tshe/her\thttps://drive.google.com/file/d/1XSYpDFTGc67To84zcfqYyooyB7KVgDJr/view?usp=sharing\t2nd year, Math-Econ, Data Science Minor, Marshall\tLos Angeles, CA\tReading, networking, taekwondo\t 🥐 Parisien Gourmandises\"\"\"\n",
     "lines = all_lines.split(\"\\n\")\n",
     "for line in lines:\n",
     "    write_markdown_file(line)"
