--- a/scripts/create-staffer-pages.ipynb
+++ b/scripts/create-staffer-pages.ipynb
@@ -47,22 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../_staffers/wang-zelong.md has been written successfully!\n",
-      "../_staffers/kerendian-norah.md has been written successfully!\n"
+      "../_staffers/zhang-luran.md has been written successfully!\n",
+      "../_staffers/rahnama-arya.md has been written successfully!\n",
+      "../_staffers/hu-vanessa.md has been written successfully!\n",
+      "../_staffers/li-anthony.md has been written successfully!\n"
      ]
     }
    ],
    "source": [
     "# Copy-paste the eight relevant columns from the staff onboarding form responses\n",
-    "all_lines = \"\"\"1/4/2024 13:07:24\tZelong Wang\the/him\thttps://drive.google.com/file/d/1di9vYlZMRn96QA_TNit5SP8bPskqHqEM/view?usp=drive_link\t4th year, Data Science and Math-Econ\tUrumqi, China\tTennis, upper division Data Science courses\t🥘 Tasty Noodle House, Burger King\n",
-    "1/4/2024 13:29:09\tNorah Kerendian\tshe/her\thttps://drive.google.com/file/d/1XSYpDFTGc67To84zcfqYyooyB7KVgDJr/view?usp=sharing\t2nd year, Math-Econ, Data Science Minor, Marshall\tLos Angeles, CA\tReading, networking, taekwondo\t 🥐 Parisien Gourmandises\"\"\"\n",
+    "all_lines = \"\"\"1/4/2024 21:16:14\tLuran Zhang\tshe/her\thttps://drive.google.com/file/d/1fS98G8dE19F29L1dLJxiu19zCFSgjsNr/view?usp=sharing\t3rd year, Data Science and Math-Econ, Muir\tLos Angeles, CA\tMy internship last summer, snowboarding, rock climbing\tShancheng Lameizi Hot Pot, Tacos El Gordo, Izakaya Sakura\n",
+    "1/4/2024 21:38:30\tArya Rahnama\the/him\thttps://drive.google.com/file/d/1BvpdzAbLXQaUR_SBx0_nsntJHhFNijSZ/view?usp=sharing \t1st year, M.S. in Data Science\tPortland, OR\tInternships at Intel and Deloitte, SSBM, Counter Strike, chess engines, basketball\tSalt & Straw, Kinoyume, Din Tai Fung\n",
+    "1/4/2024 23:16:27\tVanessa Hu\tshe/her\thttps://drive.google.com/file/d/1nVBeQLH9NMj8VwlNeelnYZYHpo0RcaLU/view?usp=sharing\t3rd, Data Science, Sixth\tSan Jose, CA\tBaking, reading\t🥐 Wayfarer Bread & Pastry, Tacos El Gordo, Sorrento Ristorante\n",
+    "1/5/2024 11:59:49\tAnthony Li\the/him\thttps://drive.google.com/file/d/1vsvaozfvk4eIvVqQcCjAe4dA1vHK6Sgy/view?usp=sharing\t4th year, Data Science, Seventh\tSan Ramon, CA\tArt and screen printing, films, video games\t🍣 Sushi Freak, CoCo Ichibanya, Tasty Noodle House\"\"\"\n",
     "lines = all_lines.split(\"\\n\")\n",
     "for line in lines:\n",
     "    write_markdown_file(line)"
@@ -70,47 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1/3/2024 11:31:00\\tAaron Rasin\\the/him\\thttps://drive.google.com/file/d/1frQe4Z09_BbIGL6bifbXLgvYesR0VBf6/view?usp=sharing']\n",
-      "Image for Aaron Rasin has been saved successfully to ../assets/staff-images/wi24\\rasin-aaron.jpg\n",
-      "['1/3/2024 12:44:11\\tDoris Gao\\tshe/her\\thttps://photos.app.goo.gl/hhiRYchdjPUfAsg86']\n",
-      "Failed to extract file ID from link for Doris Gao. Skipping.\n",
-      "['1/3/2024 16:19:19\\tAshley Ho\\tshe/her\\thttps://drive.google.com/file/d/1axBMlAyfSICSAP0nZZtjnPi6-aEkZ0in/view?usp=sharing']\n",
-      "Image for Ashley Ho has been saved successfully to ../assets/staff-images/wi24\\ho-ashley.jpg\n",
-      "['1/3/2024 17:59:52\\tEster Tsai\\tshe/her\\thttps://drive.google.com/file/d/1r-v8jm-fpMXt5pvsGqIBjaYbhquoEEYG/view?usp=sharing']\n",
-      "Image for Ester Tsai has been saved successfully to ../assets/staff-images/wi24\\tsai-ester.jpg\n",
-      "['1/3/2024 18:51:05\\tCiro Zhang\\the/him\\thttps://drive.google.com/file/d/1sw0lE791jZmE3fRRtuHlT9a8ibpZ2pWi/view?usp=sharing']\n",
-      "Failed to download and save image for Ciro Zhang. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6C4A8400>\n",
-      "['1/3/2024 20:24:50\\tOren Ciolli\\the/him\\thttps://drive.google.com/file/d/10KWQ5rUMgfQT_L-Af4452BST5o97dflb/view?usp=sharing']\n",
-      "Failed to download and save image for Oren Ciolli. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6A316900>\n",
-      "['1/3/2024 21:17:46\\tKeenan Serrao\\the/him\\thttps://drive.google.com/file/d/1EHVeeaCvbVx4OpgFzM_kWEcj64P11Vh6/view?usp=sharing']\n",
-      "Image for Keenan Serrao has been saved successfully to ../assets/staff-images/wi24\\serrao-keenan.jpg\n",
-      "['1/4/2024 0:40:02\\tSofia Tkachenko\\tshe/her\\thttps://drive.google.com/file/d/12_B5BDtQCgSzToeFfoygW_WedO_cx5sn/view?usp=sharing']\n",
-      "Image for Sofia Tkachenko has been saved successfully to ../assets/staff-images/wi24\\tkachenko-sofia.jpg\n",
-      "['1/4/2024 0:52:02\\tPallavi Prabhu\\tshe/her\\thttps://drive.google.com/file/d/1ohZshbfRa9V2A-tACoXrtSYaCTc-oWX6/view?usp=sharing']\n",
-      "Image for Pallavi Prabhu has been saved successfully to ../assets/staff-images/wi24\\prabhu-pallavi.jpg\n",
-      "['1/4/2024 1:33:57\\tAbel Seyoum\\the/him\\thttps://drive.google.com/file/d/1aSA2NNg04izkyy3gX6uGcP24SpAtiCbi/view?usp=sharing']\n",
-      "Failed to download and save image for Abel Seyoum. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6C491C70>\n",
-      "['1/4/2024 9:44:23\\tChiaChan Ho\\the/him\\thttps://drive.google.com/file/d/1NcZ2bi3irjGgtbMrtqKJ_1QrbtQqOuo0/view?usp=sharing']\n",
-      "Image for ChiaChan Ho has been saved successfully to ../assets/staff-images/wi24\\ho-chiachan.jpg\n",
-      "['1/3/2024 13:14:53\\tGuoxuan Xu\\the/him\\thttps://drive.google.com/file/d/1HLPQkC9Ei0FF1JXQmdvSMbHdcFAKvjiC/view?usp=sharing']\n",
-      "Image for Guoxuan Xu has been saved successfully to ../assets/staff-images/wi24\\xu-guoxuan.jpg\n",
-      "['1/3/2024 13:57:28\\tGina Roberg\\tshe/her\\thttps://drive.google.com/file/d/1a9BN0y_b8teywTKTcn1Mp-VWkwgVPSLC/view?usp=sharing']\n",
-      "Image for Gina Roberg has been saved successfully to ../assets/staff-images/wi24\\roberg-gina.jpg\n",
-      "['1/3/2024 15:38:51\\tRaine Hoang\\tthey/them\\thttps://drive.google.com/file/d/1-Lxj8yY1REXiJym1caTnncbCFYi4O5RR/view?usp=sharing']\n",
-      "Image for Raine Hoang has been saved successfully to ../assets/staff-images/wi24\\hoang-raine.jpg\n",
-      "['1/3/2024 16:51:23\\tJack Determan\\the/him\\thttps://docs.google.com/document/d/1WMKBCdR2zvha0siRemOkBUo6nNaml6jbteeVJQ6iGac/edit']\n",
-      "Failed to download and save image for Jack Determan. Error: 500 Server Error: Internal Server Error for url: https://doc-0c-18-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/v8sdg06jpm8b6uvhp29gjt77qfars9vj/1704395775000/16520039577878111519/*/1WMKBCdR2zvha0siRemOkBUo6nNaml6jbteeVJQ6iGac?e=download&uuid=94b61b8d-0377-4078-a2fa-5d9e49cfa076\n",
-      "['1/3/2024 17:24:34\\tYlesia Wu\\tshe/her\\thttps://drive.google.com/file/d/1cyyBxVpTJ6WigsbTVHfdHAfgVgpY5bfZ/view?usp=sharing']\n",
-      "Image for Ylesia Wu has been saved successfully to ../assets/staff-images/wi24\\wu-ylesia.jpg\n",
-      "['1/3/2024 18:26:51\\tBill Wang\\the/him\\thttps://drive.google.com/file/d/1SQNKL8hUxdpwIXB9cPNT6lqktqaWxhB8/view?usp=sharing']\n",
-      "Failed to download and save image for Bill Wang. Error: cannot identify image file <_io.BytesIO object at 0x000001DF6C49F270>\n"
+      "['1/4/2024 21:16:14\\tLuran Zhang\\tshe/her\\thttps://drive.google.com/file/d/1fS98G8dE19F29L1dLJxiu19zCFSgjsNr/view?usp=sharing']\n",
+      "Image for Luran Zhang has been saved successfully to ../assets/staff-images/wi24\\zhang-luran.jpg\n",
+      "['1/4/2024 21:38:30\\tArya Rahnama\\the/him\\thttps://drive.google.com/file/d/1BvpdzAbLXQaUR_SBx0_nsntJHhFNijSZ/view?usp=sharing ']\n",
+      "Image for Arya Rahnama has been saved successfully to ../assets/staff-images/wi24\\rahnama-arya.jpg\n",
+      "['1/4/2024 23:16:27\\tVanessa Hu\\tshe/her\\thttps://drive.google.com/file/d/1nVBeQLH9NMj8VwlNeelnYZYHpo0RcaLU/view?usp=sharing']\n",
+      "Failed to download and save image for Vanessa Hu. Error: cannot identify image file <_io.BytesIO object at 0x000001DF68997B80>\n",
+      "['1/5/2024 11:59:49\\tAnthony Li\\the/him\\thttps://drive.google.com/file/d/1vsvaozfvk4eIvVqQcCjAe4dA1vHK6Sgy/view?usp=sharing']\n",
+      "Image for Anthony Li has been saved successfully to ../assets/staff-images/wi24\\li-anthony.jpg\n"
      ]
     }
    ],
@@ -166,23 +144,10 @@
     "            print(f\"Failed to download and save image for {full_name}. Error: {e}\")\n",
     "\n",
     "# Copy-paste the first four columns from the staff onboarding form responses\n",
-    "csv_content = \"\"\"1/3/2024 11:31:00\tAaron Rasin\the/him\thttps://drive.google.com/file/d/1frQe4Z09_BbIGL6bifbXLgvYesR0VBf6/view?usp=sharing\n",
-    "1/3/2024 12:44:11\tDoris Gao\tshe/her\thttps://photos.app.goo.gl/hhiRYchdjPUfAsg86\n",
-    "1/3/2024 16:19:19\tAshley Ho\tshe/her\thttps://drive.google.com/file/d/1axBMlAyfSICSAP0nZZtjnPi6-aEkZ0in/view?usp=sharing\n",
-    "1/3/2024 17:59:52\tEster Tsai\tshe/her\thttps://drive.google.com/file/d/1r-v8jm-fpMXt5pvsGqIBjaYbhquoEEYG/view?usp=sharing\n",
-    "1/3/2024 18:51:05\tCiro Zhang\the/him\thttps://drive.google.com/file/d/1sw0lE791jZmE3fRRtuHlT9a8ibpZ2pWi/view?usp=sharing\n",
-    "1/3/2024 20:24:50\tOren Ciolli\the/him\thttps://drive.google.com/file/d/10KWQ5rUMgfQT_L-Af4452BST5o97dflb/view?usp=sharing\n",
-    "1/3/2024 21:17:46\tKeenan Serrao\the/him\thttps://drive.google.com/file/d/1EHVeeaCvbVx4OpgFzM_kWEcj64P11Vh6/view?usp=sharing\n",
-    "1/4/2024 0:40:02\tSofia Tkachenko\tshe/her\thttps://drive.google.com/file/d/12_B5BDtQCgSzToeFfoygW_WedO_cx5sn/view?usp=sharing\n",
-    "1/4/2024 0:52:02\tPallavi Prabhu\tshe/her\thttps://drive.google.com/file/d/1ohZshbfRa9V2A-tACoXrtSYaCTc-oWX6/view?usp=sharing\n",
-    "1/4/2024 1:33:57\tAbel Seyoum\the/him\thttps://drive.google.com/file/d/1aSA2NNg04izkyy3gX6uGcP24SpAtiCbi/view?usp=sharing\n",
-    "1/4/2024 9:44:23\tChiaChan Ho\the/him\thttps://drive.google.com/file/d/1NcZ2bi3irjGgtbMrtqKJ_1QrbtQqOuo0/view?usp=sharing\n",
-    "1/3/2024 13:14:53\tGuoxuan Xu\the/him\thttps://drive.google.com/file/d/1HLPQkC9Ei0FF1JXQmdvSMbHdcFAKvjiC/view?usp=sharing\n",
-    "1/3/2024 13:57:28\tGina Roberg\tshe/her\thttps://drive.google.com/file/d/1a9BN0y_b8teywTKTcn1Mp-VWkwgVPSLC/view?usp=sharing\n",
-    "1/3/2024 15:38:51\tRaine Hoang\tthey/them\thttps://drive.google.com/file/d/1-Lxj8yY1REXiJym1caTnncbCFYi4O5RR/view?usp=sharing\n",
-    "1/3/2024 16:51:23\tJack Determan\the/him\thttps://docs.google.com/document/d/1WMKBCdR2zvha0siRemOkBUo6nNaml6jbteeVJQ6iGac/edit\n",
-    "1/3/2024 17:24:34\tYlesia Wu\tshe/her\thttps://drive.google.com/file/d/1cyyBxVpTJ6WigsbTVHfdHAfgVgpY5bfZ/view?usp=sharing\n",
-    "1/3/2024 18:26:51\tBill Wang\the/him\thttps://drive.google.com/file/d/1SQNKL8hUxdpwIXB9cPNT6lqktqaWxhB8/view?usp=sharing\"\"\"\n",
+    "csv_content = \"\"\"1/4/2024 21:16:14\tLuran Zhang\tshe/her\thttps://drive.google.com/file/d/1fS98G8dE19F29L1dLJxiu19zCFSgjsNr/view?usp=sharing\n",
+    "1/4/2024 21:38:30\tArya Rahnama\the/him\thttps://drive.google.com/file/d/1BvpdzAbLXQaUR_SBx0_nsntJHhFNijSZ/view?usp=sharing \n",
+    "1/4/2024 23:16:27\tVanessa Hu\tshe/her\thttps://drive.google.com/file/d/1nVBeQLH9NMj8VwlNeelnYZYHpo0RcaLU/view?usp=sharing\n",
+    "1/5/2024 11:59:49\tAnthony Li\the/him\thttps://drive.google.com/file/d/1vsvaozfvk4eIvVqQcCjAe4dA1vHK6Sgy/view?usp=sharing\"\"\"\n",
     "\n",
     "# The directory where the images should be saved\n",
     "directory = \"../assets/staff-images/wi24\"\n",
