--- a/scripts/create-staffer-pages.ipynb
+++ b/scripts/create-staffer-pages.ipynb
@@ -47,26 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../_staffers/zhang-luran.md has been written successfully!\n",
-      "../_staffers/rahnama-arya.md has been written successfully!\n",
-      "../_staffers/hu-vanessa.md has been written successfully!\n",
-      "../_staffers/li-anthony.md has been written successfully!\n"
+      "../_staffers/fang-sophia.md has been written successfully!\n"
      ]
     }
    ],
    "source": [
     "# Copy-paste the eight relevant columns from the staff onboarding form responses\n",
-    "all_lines = \"\"\"1/4/2024 21:16:14\tLuran Zhang\tshe/her\thttps://drive.google.com/file/d/1fS98G8dE19F29L1dLJxiu19zCFSgjsNr/view?usp=sharing\t3rd year, Data Science and Math-Econ, Muir\tLos Angeles, CA\tMy internship last summer, snowboarding, rock climbing\tShancheng Lameizi Hot Pot, Tacos El Gordo, Izakaya Sakura\n",
-    "1/4/2024 21:38:30\tArya Rahnama\the/him\thttps://drive.google.com/file/d/1BvpdzAbLXQaUR_SBx0_nsntJHhFNijSZ/view?usp=sharing \t1st year, M.S. in Data Science\tPortland, OR\tInternships at Intel and Deloitte, SSBM, Counter Strike, chess engines, basketball\tSalt & Straw, Kinoyume, Din Tai Fung\n",
-    "1/4/2024 23:16:27\tVanessa Hu\tshe/her\thttps://drive.google.com/file/d/1nVBeQLH9NMj8VwlNeelnYZYHpo0RcaLU/view?usp=sharing\t3rd, Data Science, Sixth\tSan Jose, CA\tBaking, reading\t🥐 Wayfarer Bread & Pastry, Tacos El Gordo, Sorrento Ristorante\n",
-    "1/5/2024 11:59:49\tAnthony Li\the/him\thttps://drive.google.com/file/d/1vsvaozfvk4eIvVqQcCjAe4dA1vHK6Sgy/view?usp=sharing\t4th year, Data Science, Seventh\tSan Ramon, CA\tArt and screen printing, films, video games\t🍣 Sushi Freak, CoCo Ichibanya, Tasty Noodle House\"\"\"\n",
+    "all_lines = \"\"\"1/5/2024 19:35:50\tSophia Fang\tshe/her\thttps://drive.google.com/file/d/1A90BujUhQoVa3fIdHBV1X3NENMOwUYCL/view?usp=sharing\t2nd year, Data Science, Sixth\tSan Diego, CA\tDesign, webtoons, baking\t🍣Tofu House, Little Sakana\"\"\"\n",
     "lines = all_lines.split(\"\\n\")\n",
     "for line in lines:\n",
     "    write_markdown_file(line)"
