--- a/scripts/create-staffer-pages.ipynb
+++ b/scripts/create-staffer-pages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,20 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../_staffers/fang-sophia.md has been written successfully!\n"
+      "../_staffers/gillet-charlie.md has been written successfully!\n"
      ]
     }
    ],
    "source": [
     "# Copy-paste the eight relevant columns from the staff onboarding form responses\n",
-    "all_lines = \"\"\"1/5/2024 19:35:50\tSophia Fang\tshe/her\thttps://drive.google.com/file/d/1A90BujUhQoVa3fIdHBV1X3NENMOwUYCL/view?usp=sharing\t2nd year, Data Science, Sixth\tSan Diego, CA\tDesign, webtoons, baking\t🍣Tofu House, Little Sakana\"\"\"\n",
+    "all_lines = \"\"\"1/6/2024 22:04:11\tCharlie Gillet\the/him\thttps://drive.google.com/file/d/1AzpeaI4EKyx49HTaiXvLA6R4cRvDiTQT/view?usp=drivesdk\t3rd year, Data Science, Seventh\tRedwood City, CA\tBasketball, music, dragon boat racing\tSantana's Mexican Food, PT Eatery, Tacos El Gordo\"\"\"\n",
     "lines = all_lines.split(\"\\n\")\n",
     "for line in lines:\n",
     "    write_markdown_file(line)"
@@ -68,21 +68,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1/4/2024 21:16:14\\tLuran Zhang\\tshe/her\\thttps://drive.google.com/file/d/1fS98G8dE19F29L1dLJxiu19zCFSgjsNr/view?usp=sharing']\n",
-      "Image for Luran Zhang has been saved successfully to ../assets/staff-images/wi24\\zhang-luran.jpg\n",
-      "['1/4/2024 21:38:30\\tArya Rahnama\\the/him\\thttps://drive.google.com/file/d/1BvpdzAbLXQaUR_SBx0_nsntJHhFNijSZ/view?usp=sharing ']\n",
-      "Image for Arya Rahnama has been saved successfully to ../assets/staff-images/wi24\\rahnama-arya.jpg\n",
-      "['1/4/2024 23:16:27\\tVanessa Hu\\tshe/her\\thttps://drive.google.com/file/d/1nVBeQLH9NMj8VwlNeelnYZYHpo0RcaLU/view?usp=sharing']\n",
-      "Failed to download and save image for Vanessa Hu. Error: cannot identify image file <_io.BytesIO object at 0x000001DF68997B80>\n",
-      "['1/5/2024 11:59:49\\tAnthony Li\\the/him\\thttps://drive.google.com/file/d/1vsvaozfvk4eIvVqQcCjAe4dA1vHK6Sgy/view?usp=sharing']\n",
-      "Image for Anthony Li has been saved successfully to ../assets/staff-images/wi24\\li-anthony.jpg\n"
+      "['1/6/2024 22:04:11\\tCharlie Gillet\\the/him\\thttps://drive.google.com/file/d/1AzpeaI4EKyx49HTaiXvLA6R4cRvDiTQT/view?usp=drivesdk']\n",
+      "Image for Charlie Gillet has been saved successfully to ../assets/staff-images/wi24\\gillet-charlie.jpg\n"
      ]
     }
    ],
@@ -138,10 +132,7 @@
     "            print(f\"Failed to download and save image for {full_name}. Error: {e}\")\n",
     "\n",
     "# Copy-paste the first four columns from the staff onboarding form responses\n",
-    "csv_content = \"\"\"1/4/2024 21:16:14\tLuran Zhang\tshe/her\thttps://drive.google.com/file/d/1fS98G8dE19F29L1dLJxiu19zCFSgjsNr/view?usp=sharing\n",
-    "1/4/2024 21:38:30\tArya Rahnama\the/him\thttps://drive.google.com/file/d/1BvpdzAbLXQaUR_SBx0_nsntJHhFNijSZ/view?usp=sharing \n",
-    "1/4/2024 23:16:27\tVanessa Hu\tshe/her\thttps://drive.google.com/file/d/1nVBeQLH9NMj8VwlNeelnYZYHpo0RcaLU/view?usp=sharing\n",
-    "1/5/2024 11:59:49\tAnthony Li\the/him\thttps://drive.google.com/file/d/1vsvaozfvk4eIvVqQcCjAe4dA1vHK6Sgy/view?usp=sharing\"\"\"\n",
+    "csv_content = \"\"\"1/6/2024 22:04:11\tCharlie Gillet\the/him\thttps://drive.google.com/file/d/1AzpeaI4EKyx49HTaiXvLA6R4cRvDiTQT/view?usp=drivesdk\"\"\"\n",
     "\n",
     "# The directory where the images should be saved\n",
     "directory = \"../assets/staff-images/wi24\"\n",
